--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-body{
-    background-color: black;
-}
+
+
 header{
     font-size: 20px;
     background-color: whitesmoke;
@@ -18,8 +17,33 @@ main{
     font-size: 20px;
 }
 footer{
-    font-size: 20px;
+    border-top: 1px solid black; 
+    text-align: right;
 }
 h2{
     font-size: 30px;
+}
+.imagelogo{
+    width: 20%;
+    height: 20%;
+    display: block;
+}
+.imageazure{
+    align-content: center;
+    border-width: 50px;
+    width: 10%;
+    height: 5%;
+}
+.container2 {
+    display: flex;
+}
+#div1 {
+    align-content: center;
+    margin: 30px 150px 30px 250px;
+    border-right: 2px solid gainsboro;
+    padding-right: 50px;
+}
+.container1{
+    display:inline-flex;
+    grid-auto-rows: auto;
 }
