--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
 
-
-header{
-    font-size: 20px;
-    background-color: whitesmoke;
-}
 h1{
     color: white;
     font-family: 'Times New Roman', Times, serif;
@@ -15,10 +10,6 @@ h1{
 }
 main{
     font-size: 20px;
-}
-footer{
-    border-top: 1px solid black; 
-    text-align: right;
 }
 h2{
     font-size: 30px;
@@ -35,15 +26,22 @@ h2{
     height: 5%;
 }
 .container2 {
-    display: flex;
+    display: flex;    
+    margin: 30px 200px 30px 200px;
 }
-#div1 {
+#div21 {
     align-content: center;
-    margin: 30px 150px 30px 250px;
     border-right: 2px solid gainsboro;
-    padding-right: 50px;
+    padding-right: 150px;
+}
+#div22 {
+    align-content: center;
+    padding-left: 100px;
 }
 .container1{
-    display:inline-flex;
-    grid-auto-rows: auto;
+    display:flex;
+}
+footer{
+    border-top: 1px solid black; 
+    text-align: right;
 }
