--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,13 @@ h2{
 }
 .container1{
     display:flex;
+    width: 100%;
+  
 }
+.container1 div{
+    display: inline;
+}
+
 footer{
     border-top: 1px solid black; 
     text-align: right;
